--- a/client/.gitignore
+++ b/client/.gitignore
@@ -1,10 +1,26 @@
+# Dependencies
 node_modules/
-dist/
-build/
+/.pnp
+.pnp.js
+
+# Production build files
+/dist/
+/build/
+/dist-ssr/
+
+# Environment files
 .env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+.env.production
+
+# Vite specific
 .vite/
-*.log
-.DS_Store
+.vite-ssg-dist/
+.vite-ssg-temp/
+
 # Logs
 logs
 *.log
@@ -14,18 +30,31 @@ yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
-node_modules
-dist
-dist-ssr
+# Local files
 *.local
 
 # Editor directories and files
 .vscode/*
 !.vscode/extensions.json
-.idea
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+.idea/
 .DS_Store
 *.suo
 *.ntvs*
 *.njsproj
 *.sln
 *.sw?
+
+# Testing
+/coverage
+
+# Misc
+.cache/
+.temp/
+.eslintcache
+.stylelintcache
+.netlify/
+.vercel/
+.turbo/
