--- a/server/package.json
+++ b/server/package.json
@@ -26,7 +26,8 @@
     "jwks-rsa": "^3.2.0",
     "mongoose": "^8.17.1",
     "multer": "^2.0.2",
-    "razorpay": "^2.9.6"
+    "razorpay": "^2.9.6",
+    "axios": "^1.7.2"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
