--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
     "npm": "^11.5.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-dropzone": "^14.3.8",
     "react-hot-toast": "^2.5.2",
     "react-router-dom": "^7.7.0",
     "tailwindcss": "^4.1.11"
