--- a/server/package.json
+++ b/server/package.json
@@ -18,6 +18,7 @@
   "license": "ISC",
   "dependencies": {
     "@aws-sdk/client-s3": "^3.891.0",
+    "@aws-sdk/s3-presigned-post": "^3.891.0",
     "@aws-sdk/s3-request-presigner": "^3.891.0",
     "@clerk/clerk-sdk-node": "^4.13.23",
     "axios": "^1.7.2",
